# fastapi-hf-inference

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
core/models/: base.py  inference.py
core/services/: inference.py
infrastructure/db/: abc_repository.py  session_manager.py  unitofwork.py
infrastructure/db/models/: inference.py
infrastructure/db/repositories/: inference.py
infrastructure/db/sqlalchemy/: repository.py
infrastructure/inference/: huggingface.py
migrations/: env.py
migrations/versions/: d61ab5dba2c4_database_creation.py
presentation/asgi/fastapi/: api.py  builder.py
presentation/asgi/requests/: inference.py
presentation/asgi/responses/: inference.py
utils/: exception_logger.py  exceptions.py  settings.py
